# comfort_rpg

./: '  .gitignore  Cargo.toml  README.md  rustfmt.toml
assets/: dynamic_asset.assets
assets/items/: comfort_items.json  comfort_recipes.json
config/: config.toml
docs/: planning.md
src/: assets.rs  camera.rs  comfort_config.rs  crafting.rs  effects.rs  entity_tile_pos.rs  interact.rs  inventory.rs  item_util.rs  main.rs  player.rs  world_gen.rs
src/constants/: mod.rs  world_obj_sprites.rs
